Reinstate Auto-Upgrade API (#212)
While our hearts ar in the right place (e.g. keep things up to date and
secure), certain users are pests and will want absolute control over
when upgrades happen, so propagate the correct information.  This will
need a UI implementation to ensure it doesn't impose too much visual
clutter and the APIs are actually usable in typescript.

Fixes #211
